# university

./: .gitignore  README.md
AlgoAndDataStruct/Ex2/: queue.h
AlgoAndDataStruct/Ex3/matrix/: edge.h  main.cpp  matrix_graph_tests.cpp
AlgoAndDataStruct/Jasio/: README.md
AlgoAndDataStruct/Jasio/tasteCases/: test1.txt
AlgoAndDataStruct/MazeGeneratorPrim/: MazeGenerator.java
JavaEx/ex_7/: HidingPlaceSupplierSupplier.java  ParallelSearcher.java  ParallelSearcherInterface.java
MazeGeneratorPrim/: MazeGenerator.java
Year 2022/Algorithms and Data Structures/Jasio/: Jasio.java  README.md
Year 2022/Java/Ex06/: CompressionInterface.java
Year 2022/Java/Ex07/: Test07.java
Year 2022/Java/Ex09/: Start.java
Year 2022/Java/Ex10/: KasjerInterface.java  Test10.java
Year 2022/Network Programming/TCPServer/: test_generator.py
Year 2022/Numerical Methods/Ex4/: main.py
Year 2023/Data Science/DS22/: Assignment_1_without_code.ipynb  assignment-0-numpy-matplotlib.ipynb  assignment-0-numpy.ipynb  assignment-0-pandas.ipynb  assignment-0-python.ipynb
Year 2023/Data Science/Week1/: Assignment_1_without_code.ipynb
Year 2023/Data Science/assignment-02/: .gitignore  (+1 more)
algo_data_struct/ex_2/: main.cpp
algo_data_struct/topologic_graph/: main.py
java/ex_1/: Decode.java
java/ex_10/: RozmieniaczInterface.java  Test.java
java/ex_2/: Loops.java
java/ex_3/: Test.java
java/ex_5/: Graphics.java  GraphicsInterface.java  Retard.java
java/ex_7/: HidingPlaceSupplier.java
java/ex_8/: Shop.java
net_prog/MusicGetter/: pom.xml
net_prog/RestExample/: pom.xml
net_prog/WeatherGetter/: pom.xml
net_prog/ex_4/: Makefile  main.c
net_prog/udp_serv/: main.c  tester.sh
num_met_uj/num3/: main.py
year-2023/computer-aided-design/: dragon.py
year-2023/diffuse-and-parallel-programming/assignment-01/: Alloc.cpp  Alloc.h  CMakeLists.txt  Life.cpp  Life.h  LifeParallelImplementation.cpp  LifeParallelImplementation.h  LifeSequentialImplementation.cpp  LifeSequentialImplementation.h  Main.cpp  Rules.h  SimpleRules.cpp  SimpleRules.h
year-2023/diffuse-and-parallel-programming/assignment_04/: CMakeLists.txt  Simulation.cpp  compileAndRun.sh
year-2023/fortran/: .gitignore
(+415 files in other folders)
