cmake_minimum_required(VERSION 3.26)
project(assignment_04)

set(CMAKE_CXX_STANDARD 11)

add_executable(assignment_04
        main.cpp
        DataSupplier.cpp
        DataSupplier.h
        Force.cpp
        Force.h
        MyForce.cpp
        MyForce.h
        SimpleDataSupplier.cpp
        DataSupplier.h
        Simulation.h
        Simulation1.cpp
)
